# rust-hypervisor-firmware

./: .gitignore  Cargo.toml  aarch64-unknown-none.json  aarch64-unknown-none.ld  build.rs  layout.ld  riscv64gcv-unknown-none-elf.json  rust-toolchain.toml  x86_64-unknown-none.json  x86_64-unknown-none.ld
.github/workflows/: build.yaml  docker-image.yaml
efi_runtime/: Cargo.toml  layout.ld  target.json
efi_runtime/src/: common.rs  elf.rs  main.rs  serial.rs  var.rs
reloc_test_bin/: Cargo.toml  layout.ld  target.json
reloc_test_bin/src/: main.rs  serial.rs
resources/: Dockerfile
rhf_runtime/: Cargo.toml
rhf_runtime/.cargo/: config.toml
rhf_runtime/src/: common.rs  lib.rs
scripts/: dev_cli.sh  fetch_images.sh  run_cargo_tests.sh  run_coreboot_integration_tests.sh  run_integration_tests_aarch64.sh  run_integration_tests_windows.sh  run_integration_tests_x86_64.sh  run_unit_tests.sh
src/: aarch64_paging.rs  acpi.rs  ahci.rs  block.rs  boot.rs  bootinfo.rs  bzimage.rs  common.rs  coreboot.rs  delay.rs  elf.rs  fat.rs  fdt.rs  integration.rs  lib.rs  loader.rs  main.rs  mem.rs  mmio.rs  nvram.rs  part.rs  pci.rs  pe.rs  pvh.rs  rtc.rs  serial.rs  tpm.rs  upl.rs  virtio.rs  virtio_blk.rs  virtio_pci.rs  virtioblk.rs
src/arch/aarch64/: asm.rs  exception.rs  exception.s  layout.rs  mod.rs  paging.rs  ram64.s  simd.rs  translation.rs  translation_table.rs
src/arch/x86_64/: asm.rs  idt.rs  layout.rs  mod.rs  paging.rs  ram64.s
src/asm/: aarch64asm.s  aarch64start.s  mod.rs  ram32.s
src/devices/: mod.rs  pci.rs  pl011.rs  pl031.rs  rtc_pl031.rs
src/efi/: alloc.rs  block.rs  boot_services.rs  console.rs  device_path.rs  file.rs  mod.rs  protocol.rs  runtime_services.rs  tpm.rs  var.rs
