[package]
name = "hypervisor-fw"
version = "0.3.2"
authors = ["Rob Bradford <robert.bradford@intel.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# Despite "panic-strategy": "abort" being set in target.json, panic = "abort" is
# needed here to make "cargo check" and "cargo clippy" run without errors.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"

[features]
default = ["log-serial", "log-panic"]
# Have the log! macro write to serial output. Disabling this significantly
# reduces code size, but makes debugging essentially impossible
log-serial = []
# Log panics to serial output. Disabling this (without disabling log-serial)
# gets you most of the code size reduction, without losing _all_ debugging.
log-panic = ["log-serial"]
integration_tests = []
coreboot = []
efi-var = []

[dependencies]
bitflags = "1.3.2"
atomic_refcell = "0.1.8"
r-efi = "4.0.0"
linked_list_allocator = "0.9.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.9"
uart_16550 = "0.2.17"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cty = "0.2.2"
cstr_core = "0.2.5"
uuid = { version = "1.0.0-alpha.1", default-features = false }

[dev-dependencies]
dirs = "4.0.0"
rand = "0.8.5"
ssh2 = "0.9.3"
tempfile = "3.3.0"
