[package]
name = "efi_runtime"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"

[dependencies]
atomic_refcell = "0.1.7"
uart_16550 = "0.2.13"
x86_64 = "0.14.0"
r-efi = "3.2.0"
linked_list_allocator = "0.8.11"

[dependencies.goblin]
version = "0.4"
default-features = false
features = ["elf64"]
