[package]
name = "efi_runtime"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"

[features]
default = ["log-serial", "log-panic"]
log-serial = []
log-panic = ["log-serial"]

[dependencies]
atomic_refcell = "0.1.7"
uart_16550 = "0.2.14"
x86_64 = "0.14.3"
r-efi = "3.2.0"

[dependencies.goblin]
version = "0.4"
default-features = false
features = ["elf64"]
